--- a/dealing-with-outliers.ipynb
+++ b/dealing-with-outliers.ipynb
@@ -643,6 +643,380 @@
     }
    ],
    "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-27T19:20:10.647005Z",
+     "start_time": "2025-07-27T19:20:10.556469Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_2019 = pd.read_csv('eda_outliers_dataset2.csv')\n",
+    "df_2019.head(10)"
+   ],
+   "id": "9013d7790d706b69",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "         date  number_of_strikes  center_point_geom\n",
+       "0  2019-12-01                  1  POINT(-79.7 35.3)\n",
+       "1  2019-12-01                  1  POINT(-84.7 39.3)\n",
+       "2  2019-12-01                  1  POINT(-83.4 38.9)\n",
+       "3  2019-12-01                  1  POINT(-71.5 35.2)\n",
+       "4  2019-12-01                  1  POINT(-87.8 41.6)\n",
+       "5  2019-12-01                  1  POINT(-85.4 36.8)\n",
+       "6  2019-12-01                  1    POINT(-84 40.9)\n",
+       "7  2019-12-01                  1  POINT(-54.7 40.9)\n",
+       "8  2019-12-01                  1  POINT(-82.3 35.7)\n",
+       "9  2019-12-01                  1  POINT(-55.7 40.7)"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>number_of_strikes</th>\n",
+       "      <th>center_point_geom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-79.7 35.3)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-84.7 39.3)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-83.4 38.9)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-71.5 35.2)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-87.8 41.6)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-85.4 36.8)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-84 40.9)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-54.7 40.9)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-82.3 35.7)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT(-55.7 40.7)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-27T19:23:51.682812Z",
+     "start_time": "2025-07-27T19:23:51.603948Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_2019['date']= pd.to_datetime(df_2019['date'])\n",
+    "\n",
+    "df_2019['month'] = df_2019['date'].dt.month\n",
+    "df_2019['month_txt'] = df_2019['date'].dt.month_name().str.slice(stop=3)\n",
+    "\n",
+    "\n",
+    "df_2019_by_month = df_2019.groupby(['month','month_txt']).sum(numeric_only=True).sort_values('month', ascending=True).head(12).reset_index()\n",
+    "df_2019_by_month"
+   ],
+   "id": "30322b27693017a4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   month month_txt  number_of_strikes\n",
+       "0     12       Dec             209166"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>month_txt</th>\n",
+       "      <th>number_of_strikes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>209166</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "2019 appears to have data only for the month of December. The likelihood of there not being any lightning from January to November 2019 is ~0. This appears to be a case of missing data. I should probably exclude 2019 from the analysis (for most use cases).",
+   "id": "a93716407ac4f69f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-27T19:26:17.638349Z",
+     "start_time": "2025-07-27T19:26:16.137925Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_1987 = pd.read_csv('eda_outliers_dataset3.csv')\n",
+    "df_1987['date']= pd.to_datetime(df_1987['date'])\n",
+    "df_1987['month'] = df_1987['date'].dt.month\n",
+    "df_1987['month_txt'] = df_1987['date'].dt.month_name().str.slice(stop=3)\n",
+    "\n",
+    "\n",
+    "df_1987_by_month = df_1987.groupby(['month','month_txt']).sum(numeric_only=True).sort_values('month', ascending=True).head(12).reset_index()\n",
+    "df_1987_by_month"
+   ],
+   "id": "b5e3f6f293062df7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    month month_txt  number_of_strikes\n",
+       "0       1       Jan              23044\n",
+       "1       2       Feb              61020\n",
+       "2       3       Mar             117877\n",
+       "3       4       Apr             157890\n",
+       "4       5       May             700910\n",
+       "5       6       Jun            1064166\n",
+       "6       7       Jul            2077619\n",
+       "7       8       Aug            2001899\n",
+       "8       9       Sep             869833\n",
+       "9      10       Oct             105627\n",
+       "10     11       Nov             155290\n",
+       "11     12       Dec              43661"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>month_txt</th>\n",
+       "      <th>number_of_strikes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>23044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Feb</td>\n",
+       "      <td>61020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Mar</td>\n",
+       "      <td>117877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Apr</td>\n",
+       "      <td>157890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>May</td>\n",
+       "      <td>700910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Jun</td>\n",
+       "      <td>1064166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Jul</td>\n",
+       "      <td>2077619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Aug</td>\n",
+       "      <td>2001899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Sep</td>\n",
+       "      <td>869833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>105627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>155290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>43661</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-27T19:27:10.312374Z",
+     "start_time": "2025-07-27T19:27:10.293677Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_without_outliers = df[df['number_of_strikes'] >= lower_limit]\n",
+    "\n",
+    "print(\"Mean:\" + readable_numbers(np.mean(df_without_outliers['number_of_strikes'])))\n",
+    "print(\"Median:\" + readable_numbers(np.median(df_without_outliers['number_of_strikes'])))"
+   ],
+   "id": "dd747f7b5607318f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean:28.2M\n",
+      "Median:28.8M\n"
+     ]
+    }
+   ],
+   "execution_count": 25
   }
  ],
  "metadata": {
